@@ -1,5 +1,10 @@
 2019-01-17 Albert Chu <chu11@llnl.gov>
 
+	* libfreeipmi/api: Add workaround for out of order packets with
+	lan / rmcpplus ipmb.
+
+2019-01-17 Albert Chu <chu11@llnl.gov>
+
 	* libfreeipmi/sensor-read: Add error for insufficient privilege
 	level.
 
